# docc

./: .gitignore  CMakeLists.txt
.daisy/: mlir_torch.yml  python_npbench.yml
.github/workflows/: sanitizer_tests_asan.yml  sanitizer_tests_lsan.yml  sanitizer_tests_ubsan.yml  unit_tests_linux.yml  unit_tests_macos.yml
arg-capture-io/include/daisy_rtl/: arg_capture_io.h
arg-capture-io/src/: arg_capture_io.cpp
mlir/: CMakeLists.txt  README.md
mlir/benchmarks/: harness.py
mlir/benchmarks/torch/: linear.py  matmul.py  test_elementwise.py  test_linear_backend.py  test_linear_layer.py  test_matmul_net.py
mlir/bindings/: CMakeLists.txt  bindings.cpp
mlir/docc/torch/: __init__.py
mlir/include/mlir/Conversion/: SDFGPasses.h  SDFGPasses.td
mlir/integration/torch/: test_backend.py  test_compile.py  test_conv2d.py  test_elementwise.py  test_linear.py  test_linear_net.py  test_linear_regression.py  test_matmul.py  test_matmul_net.py  test_transpose.py
mlir/lib/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/ArithToSDFG/: ArithToSDFG.cpp
mlir/lib/Conversion/ConvertToSDFG/: CMakeLists.txt  ConvertToSDFG.cpp
mlir/lib/Conversion/LinalgToSDFG/: LinalgToSDFG.cpp
mlir/lib/Conversion/TensorToSDFG/: CMakeLists.txt  TensorToSDFG.cpp
mlir/test/: CMakeLists.txt  docc-mlir-opt.mlir  docc-mlir-translate.mlir  lit.cmake.cfg.py
mlir/test/Conversion/ArithToSDFG/: conversion.mlir
mlir/test/Conversion/ConvertToSDFG/: conversion.mlir
mlir/test/Conversion/FuncToSDFG/: conversion.mlir
mlir/test/Conversion/TensorToSDFG/: conversion.mlir
mlir/test/Dialect/SDFG/: invalid_empty_sdfg_body.mlir  invalid_multiple_sdfg_results.mlir  operand_return_in_void_sdfg.mlir  ops.mlir  sdfg_arg_missing_identifier.mlir  sdfg_return_type_mismatch.mlir  sdg_arg_invalid_identifier.mlir  tasklets.mlir  void_return_in_sdfg_with_result_type.mlir
mlir/test/arith/: addf.mlir  addi.mlir  andi.mlir  bitcast.mlir  cmpf_false.mlir  cmpf_oeq.mlir  cmpf_oge.mlir  cmpf_ogt.mlir  cmpf_ole.mlir  cmpf_olt.mlir  cmpf_one.mlir  cmpf_ord.mlir  cmpf_true.mlir  cmpf_ueq.mlir  cmpf_uge.mlir  cmpf_ugt.mlir  cmpf_ule.mlir  cmpf_ult.mlir  cmpf_une.mlir  cmpf_uno.mlir  cmpi_eq.mlir  cmpi_ne.mlir  cmpi_sge.mlir  cmpi_sgt.mlir  cmpi_sle.mlir  cmpi_slt.mlir  cmpi_uge.mlir  cmpi_ugt.mlir  cmpi_ule.mlir  cmpi_ult.mlir  constant.mlir  divf.mlir  divsi.mlir  divui.mlir  extf.mlir  extsi.mlir  extui.mlir  fptosi.mlir  fptoui.mlir  int_fma.mlir  (+21 more)
mlir/test/func/: empty_func.mlir  id.mlir
mlir/test/sdfg-json-to-c/: CMakeLists.txt  sdfg-json-to-c.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/docc-mlir-lsp-server/: CMakeLists.txt
mlir/tools/docc-mlir-opt/: CMakeLists.txt  docc-mlir-opt.cpp
mlir/tools/docc-mlir-translate/: CMakeLists.txt  docc-mlir-translate.cpp
opt/: CMakeLists.txt
opt/src/passes/scheduler/: cuda_scheduler.cpp  hip_scheduler.cpp  omp_scheduler.cpp
opt/src/passes/targets/: target_mapping_pass.cpp
opt/src/targets/cuda/: cuda.cpp  cuda_map_dispatcher.cpp
opt/src/targets/gpu/: gpu_map_utils.cpp
python/: CMakeLists.txt  pyproject.toml
python/benchmarks/npbench/: conftest.py  harness.py  run_npbench.py
python/benchmarks/npbench/cavity_flow/: test_cavity_flow.py
python/benchmarks/npbench/compute/: test_compute.py
python/benchmarks/npbench/deep_learning/mlp/: test_mlp.py
python/benchmarks/npbench/deep_learning/softmax/: test_softmax.py
python/benchmarks/npbench/go_fast/: test_go_fast.py
python/benchmarks/npbench/polybench/: test_adi.py  test_atax.py  test_bicg.py  test_cholesky.py  test_correlation.py  test_covariance.py  test_deriche.py  test_doitgen.py  test_durbin.py  test_fdtd_2d.py  test_floyd_warshall.py  test_gemm.py  test_gemver.py  test_gesummv.py  test_gramschmidt.py  test_heat_3d.py  test_jacobi_1d.py  test_jacobi_2d.py  test_lu.py  test_seidel_2d.py  test_symm.py  test_syr2k.py  test_syrk.py  test_trmm.py
python/benchmarks/npbench/spmv/: test_spmv.py
python/benchmarks/npbench/weather_stencils/: test_hdiff.py  test_vadv.py
python/bindings/: bindings.cpp  py_structured_sdfg.cpp  py_structured_sdfg.h
python/bindings/builder/: py_structured_sdfg_builder.cpp  py_structured_sdfg_builder.h
python/docc/compiler/: compiled_sdfg.py
python/docc/python/: __init__.py  ast_parser.py  ast_utils.py  memory.py  python_program.py  target_registry.py
python/docc/python/functions/: numpy.py  scipy.py
python/tests/python/: test_memory.py
python/tests/python/ast_parser/: test_inlining.py
python/tests/python/functions/numpy/: test_numpy_alloc.py  test_numpy_arithmetic.py  test_numpy_arithmetic_scalar.py  test_numpy_elementwise.py  test_numpy_elementwise_broadcast.py  test_numpy_loops.py  test_numpy_math.py  test_numpy_reduce.py  test_numpy_reshape.py  test_numpy_slicing.py  test_numpy_where.py
python/tests/python/program/: test_scheduling.py
python/tests/python/targets/: test_etsoc.py  test_overrides.py
rpc/: CMakeLists.txt
rpc/src/transformations/: rpc_node_transform.cpp
sdfg/: CMakeLists.txt
sdfg/src/analysis/: arguments_analysis.cpp  loop_analysis.cpp  reference_analysis.cpp
sdfg/src/cutouts/: cutouts.cpp
sdfg/src/passes/: pipeline.cpp
sdfg/src/serializer/: json_serializer.cpp
sdfg/src/symbolic/: extreme_values.cpp  utils.cpp
sdfg/src/transformations/: map_fusion.cpp
sdfg/src/types/: tensor.cpp
sdfg/src/visualizer/: dot_visualizer.cpp
sdfg/tests/: CMakeLists.txt
sdfg/tests/analysis/: arguments_analysis_test.cpp
sdfg/tests/cutouts/: cutouts_test.cpp
sdfg/tests/passes/: pipeline_test.cpp
sdfg/tests/symbolic/: extreme_values_test.cpp  utils_test.cpp
sdfg/tests/transformations/: map_fusion_test.cpp
sdfg/tests/visualizer/: dot_visualizer_test.cpp
targets/: CMakeLists.txt
targets/et/: CMakeLists.txt
targets/et/cmake/: docc-target-etConfig.cmake.in
targets/et/rt/: CMakeLists.txt
targets/et/rt/include/docc/rt/et/: et-sysemu-config.h.in  et.h
targets/et/rt/src/: runtime.cpp
targets/et/src/et/: et_lib_node_mapper.cpp  target.cpp
targets/et/src/et/blas/: gemm.cpp
targets/et/tests/: CMakeLists.txt  test.cpp
(+86 files in other folders)
